# ovos-windows

./: README.md  mycroft.conf.example  ovos-PHAL.py  ovos.ps1  pyproject.toml
